--- a/src/main/resources/assets/carica/www/styles.scss
+++ b/src/main/resources/assets/carica/www/styles.scss
@@ -6,16 +6,32 @@
 }
 
 body {
-    position: absolute;
-    top: 1in;
-    left: calc(50vw - 4in);
-    width: 8in;
     font-family: Miracode, Helvetica, sans-serif, monospace, serif;
     background: var(--bg0);
     @include theming.dark();
     @media (prefers-color-scheme: light) {
         @include theming.light();
     }
+}
+
+main {
+    position: absolute;
+    top: 1in;
+    left: calc(50vw - 4in);
+    width: 8in;
+}
+
+a:not(:is(h1, h2) a) {
+    text-decoration: currentColor underline;
+    text-underline-offset: 0;
+    transition: text-underline-offset 0.125s;
+    &:hover {
+        text-underline-offset: 0.25em;
+    }
+}
+:is(h1, h2) a {
+    color: inherit;
+    text-decoration: none;
 }
 
 .nocopy {
@@ -57,7 +73,8 @@ body {
 
 .jumpbar {
     position: absolute;
-    left: 100%;
+    right: calc(4in - 100vw / 2);
+    text-align: right;
     padding-left: 1cm;
     top: 0;
     height: 100%;
